# cpp-playground-template

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
foo_lib/: CMakeLists.txt
foo_lib/include/: foo_class.h
foo_lib/src/: foo_class.cpp
include/: foo_header_only.h
scripts/: build.sh  run.sh
src/: main.cpp
